# code-for-ai-league

./: README.md
api_service/: .dockeringore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
api_service/ballskicker_api/: main.py
api_service/ballskicker_api/api/auth/: auth.py  auth_context.py  cognito_auth.py
api_service/ballskicker_api/api/dependencies/: auth.py  media.py  users.py
api_service/ballskicker_api/api/models/: common.py  profile.py  recordings.py
api_service/ballskicker_api/api/routes/: file_upload.py  profile.py  recordings.py
api_service/ballskicker_api/common/: utils.py
api_service/ballskicker_api/config/: settings.py
api_service/ballskicker_api/core/: database.py
api_service/ballskicker_api/models/: user_profile.py
api_service/ballskicker_api/repositories/: media_repository.py  user_repository.py
api_service/ballskicker_api/services/: aws_client.py  media_service.py  users_service.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: SocialLogin.tsx
frontend/src/components/common/: VideoModal.tsx  VideoPlayer.tsx  VideoUpload.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx  UploadModal.tsx
frontend/src/components/landing/: Benefits.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Testimonials.tsx
frontend/src/components/ui/: logo.tsx
frontend/src/components/visualization/: Heatmap.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: auth.ts
frontend/src/pages/: AuthCallbackPage.tsx  AuthPage.tsx  DashboardPage.tsx  LandingPage.tsx  ProfilePage.tsx  VideoUploadPage.tsx
frontend/src/utils/: apiClient.tsx
video_analyzer/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
video_analyzer/video_analyser/: __main__.py  insights.py  main.py  message_visibility_manager.py  queue_models.py  video_analyser.py  video_metadata_manager.py
video_analyzer/video_analyser/lib/player_heatmap/: field_detector.py  find_homography.py  player_heatmap.py  player_tracker.py
video_analyzer/video_analyser/lib/tracker/: association.py  kalmanfilter.py  ocsort.py
video_processor/: .dockeringore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
video_processor/video_processor/: main.py  queue_models.py  thumbnail_creator.py  video_metadata_manager.py  video_processor.py
